Fix response list not scrolling issue.
The height was not set so the content overflowed the container.

--- a/frontend/mongo-web-shell.css
+++ b/frontend/mongo-web-shell.css
@@ -16,6 +16,7 @@
 }
 
 .mws-response-list {
+  height: 100%;
   list-style-type: none;
   padding: 0;
   margin: 0;
